// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Listbox /> should render with no highlighted <Option /> 1`] = `
<div
  aria-selected="false"
  class="text-tsm text-onSurface hover:bg-primaryVariant w-full cursor-pointer py-2 px-3 font-light transition-colors bg-surface"
  data-value="option A"
  id="listbox-item-0"
  role="option"
>
  option A
</div>
`;

exports[`<Listbox /> should render with no highlighted <Option /> 2`] = `
<div
  aria-selected="false"
  class="text-tsm text-onSurface hover:bg-primaryVariant w-full cursor-pointer py-2 px-3 font-light transition-colors bg-surface"
  data-value="option B"
  id="listbox-item-1"
  role="option"
>
  option B
</div>
`;

exports[`<Listbox /> should render with no highlighted <Option /> 3`] = `
<div
  aria-selected="false"
  class="text-tsm text-onSurface hover:bg-primaryVariant w-full cursor-pointer py-2 px-3 font-light transition-colors bg-surface"
  data-value="option C"
  id="listbox-item-2"
  role="option"
>
  option C
</div>
`;
